# ElainaBot_v2

./: .env.example  .gitignore  Dockerfile  LICENSE  PLUGIN_DEVELOPMENT.md  README.md  docker-compose.build.yml  docker-entrypoint.sh  install.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  test.yml
config/: bot.example.yaml  bot.yaml
core/: application.py  bot.py
core/base/: config.py
core/bot/: event.py  manager.py  registry.py
core/message/: event.py  keyboard.py  parsers.py  sender.py
core/module/: manager.py
core/network/: access.py  websocket.py
core/plugin/: _dispatch.py  context.py  manager.py
core/storage/: _base.py  log.py
modules/onebot_adapter/: action_context.py  adapter.py  base_action.py  config.py
modules/onebot_adapter/actions/: can_send_image.py  can_send_record.py  get_friend_list.py  get_group_list.py  get_group_member_info.py  get_group_member_list.py  get_login_info.py  get_status.py  get_stranger_info.py  get_version_info.py  send_message.py
modules/onebot_adapter/lib/: event_converter.py  id_mapper.py  ws_server.py
modules/onebot_adapter/payload/: message_sender_service.py  payload_converter.py  segment_parser.py
modules/playwright/: main.py
plugins/system/app/: admin.py  basic.py  stats.py
tests/: conftest.py
tests/core/: test_application.py  test_config.py  test_event.py  test_keyboard.py
web/: api.py  auth.py  setup.py  ws.py
web/api/: __init__.py  auth.py  bots.py  config.py  database.py  market.py  messages.py  modules.py  openapi.py  plugins.py  shared.py  stats.py  update.py  web_pages.py
web/tools/: bot_restart.py  message_handler.py  plugin_manager.py  plugin_market_handler.py  update_handler.py  updater.py
web/tools/_bot/: api.py  info.py  restart.py
web/tools/_config/: handler.py
web/tools/_database/: browser.py
web/tools/_market/: fetch.py  install.py  local.py  market.py  shared.py
web/tools/_message/: handlers.py  log_utils.py  media.py  query.py  shared.py
web/tools/_openapi/: handler.py
web/tools/_plugin_mgr/: config.py  files.py  module.py  scan.py  shared.py
web/tools/_stats/: log.py  statistics.py  system.py
web/tools/_updater/: framework.py  handlers.py  mirror.py  shared.py
