[project]
name = "elainabot"
version = "2.0.0"
description = "ElainaBot - QQ Official Bot Framework"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pyyaml>=6.0,<7.0",
    "aiohttp>=3.9,<3.14",
    "httpx>=0.27,<0.29",
    "websockets>=11.0,<15.0",
    "cryptography>=41.0,<45.0",
    "psutil>=5.9,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<0.26",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.8,<1.14",
    "ruff>=0.4,<0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "modules/",
    "plugins/",
    "data/",
    "tests/",
    "web/dist/",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["core", "web"]
omit = ["tests/*", "web/dist/*"]
